--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 flask==3.0.0
 flask-cors==4.0.0
 werkzeug==3.0.1
+dacite>=1.9.2
+huggingface-hub>=0.30.2
+librosa>=0.11.0
+mlx>=0.22.1
+numpy>=2.2.5
+typer>=0.15.3
